--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         /* Hero Section */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(44, 62, 80, 0.7), rgba(44, 62, 80, 0.7)), url('img.jpg') no-repeat center center/cover;
+            background: linear-gradient(rgba(44, 62, 80, 0.7), rgba(44, 62, 80, 0.7)), url('img2.jpeg') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
