--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         .hero {
             height: 100vh;
             background: linear-gradient(rgba(44, 62, 80, 0.7), rgba(44, 62, 80, 0.7)), url('img2.jpeg') no-repeat center center/cover;
+            transform: scaleX(-1);
             display: flex;
             align-items: center;
             justify-content: center;
