--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="profile.jpg" alt="Dr. Sreekanth Kopuri">
+                    <img src="img2.jpeg" alt="Dr. Sreekanth Kopuri">
                 </div>
                 <div class="about-text">
                     <h2>Internationally Acclaimed Poet & Scholar</h2>
